#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.58)
AC_INIT([l2tpns], [1.0.0], [fred_nerk@sourceforge.net])
AC_CONFIG_SRCDIR([ll.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h malloc.h memory.h netdb.h netinet/in.h stdlib.h string.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([alarm gethostbyname gethostname gettimeofday inet_ntoa memset pow select socket strcasecmp strchr strdup strerror strrchr])

# Checks for libraries.
AC_CHECK_LIB([cli], [cli_init])
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([m], [pow])

AC_DEFINE_UNQUOTED(LIBDIR, ["$prefix/lib/l2tpns"])
AC_DEFINE_UNQUOTED(ETCDIR, ["$sysconfdir"])
AC_DEFINE_UNQUOTED(BINDIR, ["$prefix/bin"])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
